Mudanças no front
Header atualizado

--- a/Anicon/Views/Home/Contact.cshtml
+++ b/Anicon/Views/Home/Contact.cshtml
@@ -1,17 +1,49 @@
 ﻿@{
     ViewBag.Title = "Contact";
+    Layout = null;
+
+
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="~/Content/css/Estilo.css" />
+</head>
+<header class="p-3 mb-3 border-bottom">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+    <div class="container">
+        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+            <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
+                <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
+            </a>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
+            <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                @*<li><a href="~/Views/Home/Index.cshtml" class="nav-link px-2 link-secondary">Overview</a></li>
+                    <li><a href="~/Views/Home/About.cshtml" class="nav-link px-2 link-dark">Inventory</a></li>
+                    <li><a href="~/Views/Home/Contact.cshtml" class="nav-link px-2 link-dark">Customers</a></li>
+                    <li><a href="~/Views/Home/Login.cshtml" class="nav-link px-2 link-dark">Products</a></li>*@
+                @Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link px-2 link-secondary" })
+                @Html.ActionLink("Sobre nós", "About", "Home", new { area = "" }, new { @class = "nav-link px-2 link-dark" })
+                @Html.ActionLink("Contato", "Contact", "Home", new { area = "" }, new { @class = "nav-link px-2 link-dark" })
+                @Html.ActionLink("Login", "Login", "Home", new { area = "" }, new { @class = "nav-link px-2 link-dark" })
 
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+            </ul>
+
+            <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
+                <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
+            </form>
+
+            <div class="dropdown text-end">
+                <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="true">
+                    <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
+                </a>
+                <ul class="dropdown-menu text-small" style="">
+                    <li><a class="dropdown-item" href="#">New project...</a></li>
+                    <li><a class="dropdown-item" href="#">Settings</a></li>
+                    <li><a class="dropdown-item" href="#">Profile</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="#">Sign out</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</header>
